--- a/style.css
+++ b/style.css
@@ -1,28 +1,52 @@
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/oswald/v35/TK3_WkUHHAIjg75cFRf3bXL8LICs18NvgUE.ttf) format('truetype');
+}
+
 body {
-  background: #fcfcc0;
-  background: cornsilk;
-  width: 200px;
+  background: #EDC6EE;
+  color: #FF4A15;
+  font-family: 'Oswald', sans-serif;
+  font-weight: bold;
+  width: 317px;
+  height: 400px;
+}
+
+#sparkles {
+  position: absolute;
+  top: 32%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: auto;
 }
 
 div#paste-div {
-  font-size: 4em;
+  font-size: 48px;
   margin: auto;
   display: block;
   text-align: center;
-  color: #6cedfc;
   padding: 10%;
-  font-family: 'VT323', monospace;
+
+  border: 4px solid #FF4A15;
+  box-sizing: border-box;
+  border-radius: 20px;
+  height: 100%;
+  margin: 1.5% 2%;
+  position: relative;
 }
 
 div#downloaded {
   font-size: 0.8em;
 }
 
-div#paste-div img {
-  width: 100px;
-  height: auto;
-}
-
 div#paste-div img#download {
-  width: 35%;
+  width: 65%;
+  position: absolute;
+  left: 50%;
+  bottom: -5%;
+  transform: translate(-50%, 0);
 }
